examples/test/testpolicy7497.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7497
  namespace: namespace444
spec:
  podSelector:
    matchLabels:
      key18: value31
      key0: value26
      key47: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value49
          key21: value42
      podSelector:
        matchLabels:
          key48: value45
          key3: value4
